[~] Long cake name fix (mobile) [~] Mini-cart jump to top fix [+] 404 error page

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -1,6 +1,7 @@
 // Imports
 @import "compass/layout/sticky-footer"
 @import "compass/reset"
+@import "compass/css3/user-interface"
 @import "compass"
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic)
 @import url(http://fonts.googleapis.com/css?family=PT+Sans+Narrow&subset=cyrillic,latin)
@@ -493,12 +494,14 @@ footer
         display: block
         float: left
         margin: 7px 10px 0
+        +user-select(none)
         +breakpoint(phone)
             font-size: 1.2em
             display: inline-block
             float: none
-        a
+        a, span
             +link-colors($main-light-color, adjust-lightness($main-light-color, -10%))
+            cursor: pointer
 .icn-cart 
     margin-bottom: -2px
     padding-right: 7px
@@ -857,6 +860,9 @@ footer
         line-height: .95em
         color: $red-button-bg
         margin: 0 10px 15px
+        +breakpoint(phone)
+            font-size: 4.2em
+            line-height: 1em
     p
         font-size: 1.5em
         margin: auto 10px
@@ -1115,6 +1121,23 @@ footer
     text-align: right
     width: 20%
 
+
+// Error page
+.error-page
+    background: white
+    .error-text-holder
+        margin-top: 200px
+        +breakpoint(phone)
+            margin-top: 30px
+    h1, h2, p
+        color: $main-dark-colot
+        text-shadow: none
+        margin: 0 20px
+    img
+        width: 100%
+        margin-top: 50px
+        +breakpoint(phone)
+            margin-top: 0
 
 
 // Fix
